--- a/about.html
+++ b/about.html
@@ -60,9 +60,9 @@
                             <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                                 <li><a href="index.html" class="nav-link">Home</a></li>
                                 <li class="has-children">
-                                    <a href="#about-section" class="nav-link">About Us</a>
+                                    <a href="index.html" class="nav-link">About Us</a>
                                     <ul class="dropdown">
-                                        <li><a href="#Booking" class="nav-link">Booking Hours</a></li>
+                                        <li><a href="index.html" class="nav-link">Booking Hours</a></li>
                                         <!-- <li><a href="#pricing-section" class="nav-link">Services</a></li> -->
                                         <!-- <li><a href="#faq-section" class="nav-link">FAQ</a></li> -->
                                         <!-- <li class="has-children">
@@ -77,10 +77,10 @@
                                 </li>
 
                                 <!-- <li><a href="gallery.html" target="_blank" class="nav-link">Gallery</a></li> -->
-                                <li><a href="#services-section" class="nav-link">Services</a></li>
+                                <li><a href="index.html" class="nav-link">Services</a></li>
                                 <!-- <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li> -->
-                                <li><a href="#contact-section" class="nav-link">Contact</a></li>
-                                <li><a href="#get-parking-section" target="_blank" class="nav-link">Get Parking</a></li>
+                                <li><a href="index.html" class="nav-link">Contact</a></li>
+                                <li><a href="app.html" target="_blank" class="nav-link">Get Parking</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -95,7 +95,29 @@
 
         </header>
 
+        <div class="site-blocks-cover overlay" style="background-image: url(img/dp.webp);" data-aos="fade"
+            id="home-section">
 
+            <div class="container">
+                <div class="row align-items-center justify-content-center">
+                    <div class="col-md-8 mt-lg-5 text-center">
+                        <h1 class="text-uppercase" data-aos="fade-up">About</h1>
+                        <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Parkoba</p>
+                        <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Who are we </p>
+                        <!-- <div data-aos="fade-up" data-aos-delay="100">
+                            <a href="give.html" class="btn smoothscroll btn-primary mr-2 mb-2">what we do</a>
+                        </div> -->
+                    </div>
+
+                </div>
+            </div>
+
+            <a href="#about-section" class="mouse smoothscroll">
+                <span class="mouse-icon">
+                    <span class="mouse-wheel"></span>
+                </span>
+            </a>
+        </div>
 
         <div class="site-section cta-big-image" id="about-section">
             <div class="container">
@@ -113,7 +135,8 @@
                     <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
                         <div class="mb-4">
                             <h3 class="h3 mb-4 text-black">About Parkoba </h3>
-                            <p>When it comes to parking, we understand that it can be a hassle to find a spot,
+                            <p class="about-text">When it comes to parking, we understand that it can be a hassle to
+                                find a spot,
                                 especially in busy areas. That's why we've made it our mission to provide you with a
                                 stress-free and convenient parking experience. Whether you need to park for a few hours
                                 or several days, we have a wide range of parking options available to suit your needs.
@@ -131,7 +154,17 @@
 
                                 Our team of experienced professionals is dedicated to providing you with the best
                                 customer service and support. We understand that parking can be stressful, which is why
-                                we strive to make your experience as smooth and enjoyable as possible. Whether you need
+                                we strive to make your experience as smooth and enjoyable as possible.
+                            </p>
+                        </div>
+                    </div>
+
+
+
+                    <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
+                        <div class="mb-4">
+                            <!-- <h3 class="h3 mb-4 text-black">About Parkoba </h3> -->
+                            <p class="about-text">Whether you need
                                 help finding a parking spot or have questions about our services, our friendly and
                                 knowledgeable customer service team is always available to assist you.
 
@@ -148,9 +181,21 @@
                             </p>
                         </div>
                     </div>
+
+                    <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
+                        <figure class="circle-bg">
+                            <img src="img/key.webp" alt="Image" class="img-fluid">
+                        </figure>
+                    </div>
+
+
                 </div>
             </div>
         </div>
+
+
+
+
 
 
         <footer class="site-footer">
