--- a/index.html
+++ b/index.html
@@ -97,13 +97,11 @@
 
 
 
-    <div class="site-blocks-cover overlay" style="background-image: url(img/dp.webp);" data-aos="fade"
+    <div class="site-blocks-cover overlay" style="background-image: url(img/DP2.mp4);" data-aos="fade"
       id="home-section">
 
       <div class="container">
         <div class="row align-items-center justify-content-center">
-
-
           <div class="col-md-8 mt-lg-5 text-center">
             <h1 class="text-uppercase" data-aos="fade-up">Welcome</h1>
             <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">to Parkoba</p>
@@ -140,7 +138,7 @@
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
             <div class="mb-4">
               <h3 class="h3 mb-4 text-black">About Parkoba</h3>
-              <p>We are a small startup enterprise dedicated in helping Nigeria curb The flow of traffic and illegal
+              <p class="about-text">We are a small startup enterprise dedicated in helping Nigeria curb The flow of traffic and illegal
                 parking. We believe that all of our customers deserve the highest level of service, and we are committed
                 to providing just that.Welcome to our parking website, your go-to destination for all your parking
                 needs. <br> We are dedicated to providing you with the best parking services that are safe, secure, and
@@ -496,7 +494,7 @@
                   <li><a href="#services-section" class="smoothscroll">Services</a></li>
                   <!-- <li><a href="#vision-s" class="smoothscroll">Testimonials</a></li> -->
                   <li><a href="#contact-section" class="smoothscroll">Contact Us</a></li>
-                  <li><a href="#contact-section" class="smoothscroll">Terms and Policy</a></li>
+                  <li><a href="tc.html" class="smoothscroll">Terms and Policy</a></li>
 
                 </ul>
               </div>
@@ -579,8 +577,6 @@
   <script src="js/jquery.fancybox.min.js"></script>
   <script src="js/jquery.sticky.js"></script>
   <script src="js/isotope.pkgd.min.js"></script>
-
-
   <script src="js/main.js"></script>
 
 </body>
