--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">to Parkoba</p>
             <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Park with pride</p>
             <div data-aos="fade-up" data-aos-delay="100">
-              <a href="give.html" class="btn smoothscroll btn-primary mr-2 mb-2">Book Parking </a>
+              <a href="app.html" class="btn smoothscroll btn-primary mr-2 mb-2">Book Parking </a>
             </div>
           </div>
 
@@ -243,7 +243,7 @@
                 <h2 class="section-title mb-3">Pre-Paid Parking Spot </h2>
                 <p>Fast and affordable</p>
                 <div data-aos="fade-up" data-aos-delay="100">
-                  <a href="give.html" class="btn smoothscroll btn-primary mr-2 mb-2">Book Parking </a>
+                  <a href="app.html" class="btn smoothscroll btn-primary mr-2 mb-2">Book Parking </a>
                 </div>
 
                 <!-- <p><a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a></p> -->
