--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 
 
-    <div class="site-blocks-cover overlay" style="background-image: url(img/DP2.mp4);" data-aos="fade"
+    <div class="site-blocks-cover overlay" style="background:url(img/dp.webp);" data-aos="fade"
       id="home-section">
 
       <div class="container">
