--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <li><a href="#services-section" class="nav-link">Services</a></li>
                 <!-- <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li> -->
                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
-                <li><a href="#get-parking-section" target="_blank" class="nav-link">Get Parking</a></li>
+                <!-- <li><a href="#get-parking-section" target="_blank" class="nav-link">Get Parking</a></li> -->
               </ul>
             </nav>
           </div>
@@ -97,8 +97,7 @@
 
 
 
-    <div class="site-blocks-cover overlay" style="background:url(img/dp.webp);" data-aos="fade"
-      id="home-section">
+    <div class="site-blocks-cover overlay" style="background:url(img/dp.webp);" data-aos="fade" id="home-section">
 
       <div class="container">
         <div class="row align-items-center justify-content-center">
@@ -138,7 +137,8 @@
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
             <div class="mb-4">
               <h3 class="h3 mb-4 text-black">About Parkoba</h3>
-              <p class="about-text">We are a small startup enterprise dedicated in helping Nigeria curb The flow of traffic and illegal
+              <p class="about-text">We are a small startup enterprise dedicated in helping Nigeria curb The flow of
+                traffic and illegal
                 parking. We believe that all of our customers deserve the highest level of service, and we are committed
                 to providing just that.Welcome to our parking website, your go-to destination for all your parking
                 needs. <br> We are dedicated to providing you with the best parking services that are safe, secure, and
@@ -267,10 +267,6 @@
       </div>
     </section>
 
-
-
-
-
     <section class="site-section">
       <div class="container">
         <div class="row mb-5">
@@ -281,8 +277,6 @@
           <div class="col-lg-6 order-2 order-lg-1" data-aos="fade">
 
             <div class="row">
-
-
 
               <!-- <div class="col-md-12 mb-md-5 mb-0 col-lg-6" data-aos="fade-up" data-aos-delay=""
                 style="margin-bottom: 30px i !important;">
@@ -311,9 +305,6 @@
         </div>
       </div>
     </section>
-
-
-
     <!-- <section class="site-section testimonial-wrap" id="testimonials-section" data-aos="fade">
       <div class="container">
         <div class="row mb-5">
@@ -495,6 +486,7 @@
                   <!-- <li><a href="#vision-s" class="smoothscroll">Testimonials</a></li> -->
                   <li><a href="#contact-section" class="smoothscroll">Contact Us</a></li>
                   <li><a href="tc.html" class="smoothscroll">Terms and Policy</a></li>
+                  <li><a href="tc.html" class="smoothscroll">Join us </a></li>
 
                 </ul>
               </div>
