--- a/tc.html
+++ b/tc.html
@@ -76,7 +76,7 @@
                                 <li><a href="#services-section" class="nav-link">Services</a></li>
                                 <!-- <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li> -->
                                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
-                                <li><a href="#get-parking-section" target="_blank" class="nav-link">Get Parking</a></li>
+                                <!-- <li><a href="#get-parking-section" target="_blank" class="nav-link">Get Parking</a></li> -->
                             </ul>
                         </nav>
                     </div>
@@ -109,7 +109,9 @@
                                     <li><a href="#services-section" class="smoothscroll">Services</a></li>
                                     <!-- <li><a href="#vision-s" class="smoothscroll">Testimonials</a></li> -->
                                     <li><a href="#contact-section" class="smoothscroll">Contact Us</a></li>
-                                    <li><a href="tc.html" class="smoothscroll">Terms and Policy</a></li>
+                                    <li><a href="tc.html" class="smoothscroll">Terms and Condition</a></li>
+                                    <li><a href="tc.html" class="smoothscroll">Join us </a></li>
+
 
                                 </ul>
                             </div>
