--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
                                 <li><a href="index.html" class="nav-link">Services</a></li>
                                 <!-- <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li> -->
                                 <li><a href="index.html" class="nav-link">Contact</a></li>
-                                <li><a href="app.html" target="_blank" class="nav-link">Get Parking</a></li>
+                                <!-- <li><a href="app.html" target="_blank" class="nav-link">Get Parking</a></li> -->
                             </ul>
                         </nav>
                     </div>
@@ -215,6 +215,8 @@
                                     <li><a href="#services-section" class="smoothscroll">Services</a></li>
                                     <!-- <li><a href="#vision-s" class="smoothscroll">Testimonials</a></li> -->
                                     <li><a href="#contact-section" class="smoothscroll">Contact Us</a></li>
+                                    <li><a href="tc.html" class="smoothscroll">Terms and Condition</a></li>
+                                    <li><a href="tc.html" class="smoothscroll">Join us </a></li>
                                 </ul>
                             </div>
                             <div class="col-md-3">
