--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Give</title>
+    <title>About Parkoba</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
@@ -39,8 +39,6 @@
             </div>
             <div class="site-mobile-menu-body"></div>
         </div>
-
-
 
         <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
 
@@ -101,9 +99,9 @@
             <div class="container">
                 <div class="row align-items-center justify-content-center">
                     <div class="col-md-8 mt-lg-5 text-center">
-                        <h1 class="text-uppercase" data-aos="fade-up">About</h1>
-                        <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Parkoba</p>
-                        <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Who are we </p>
+                        <h1 class="text-uppercase" data-aos="fade-up">About Parkoba</h1>
+                        <!-- <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Parkoba</p> -->
+                        <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Park with Pride </p>
                         <!-- <div data-aos="fade-up" data-aos-delay="100">
                             <a href="give.html" class="btn smoothscroll btn-primary mr-2 mb-2">what we do</a>
                         </div> -->
