--- a/tc.html
+++ b/tc.html
@@ -86,7 +86,74 @@
                 </div>
             </div>
         </header>
+        <div class="site-section cta-big-image" id="about-section">
+            <div class="container">
+                <div class="row mb-5">
+                    <div class="col-12 text-center" data-aos="fade">
+                        <h2 class="section-title mb-3">Parkoba Terms </h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
+                        <figure class="circle-bg">
+                            <img src="img/key.webp" alt="Image" class="img-fluid">
+                        </figure>
+                    </div>
+                    <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
+                        <div class="mb-4">
+                            <h3 class="h3 mb-4 text-black">Parkoba Terms and conditions </h3>
+                            <p class="about-text">Welcome! By using the Parkoba.com website or mobile application
+                                (collectively the "Sites"), you agree to be bound by the following terms and conditions
+                                (the "Terms of Use" or "Agreement"). As used in this Agreement, Parkoba Nigeria will be
+                                referred to as "Parkoba" or "we", and you will be referred to as "you". Parkoba and its
+                                associated websites and mobile applications are owned by Parkoba Nigeria and all rights
+                                of Parkoba are reserved on behalf of Parkoba Nigeria.
+                                <li class="about-text">
+                                    <span>
+                                        <h5>Acceptance:</h5>
+                                    </span> By using the Site and any provided parking information, materials and
+                                    documents (“Materials”) made available on the Site you are agreeing to be bound by
+                                    the
+                                    following Terms including any notices contained or referenced within. If you do not
+                                    wish
+                                    to be bound by these Terms please do not use the Site or Materials. We reserve the
+                                    right, in our sole discretion, to modify or supplement these Terms at any time/ .
+                                    Therefore, please check periodically for modifications. All amended Terms become
+                                    effective as to you upon being posted and your continued use of the Site. If you do
+                                    not
+                                    agree to any changes you must cease use of the Site. Additionally, by using the Site
+                                    you
+                                    represent that you are of sufficient legal age to enter into this Agreement and
+                                    create a
+                                    binding legal obligation for any liability you may incur as a result of your use of
+                                    the
+                                    Site. You agree to promptly update your membership information (if applicable) in
+                                    order
+                                    to keep it current, complete, and accurate.
 
+                                    You confirm that you have read and also accept the terms of our Privacy Policy, the
+                                    terms of which are hereby incorporated into this Agreement. You hereby consent to
+                                    the
+                                    use of your personal information by Parkoba and/or third-party providers and
+                                    distributors in accordance with the terms of the and for the purposes set forth in
+                                    the
+                                    Privacy Policy. Parkoba makes no representation or warranty, and hereby disclaims
+                                    any
+                                    and all liability, with regard to the sufficiency of the security measures used for
+                                    data
+                                    handling and storage. Parkoba will not be responsible for any actual or
+                                    consequential
+                                    damages that result from a security breach or technical malfunction.
+                                </li>
+
+
+
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 
