--- a/tc.html
+++ b/tc.html
@@ -42,7 +42,6 @@
 
             <div class="container">
                 <div class="row align-items-center">
-
                     <div class="col-6 col-xl-2">
                         <a href="#"> <img src="img/check.jpg" class="mb-0 site-logo"><a href="index.html"
                                 class="h2 mb-0"><span class="text-primary"></span></a>
@@ -111,40 +110,17 @@
                                 <li class="about-text">
                                     <span>
                                         <h5>Acceptance:</h5>
-                                    </span> By using the Site and any provided parking information, materials and
-                                    documents (“Materials”) made available on the Site you are agreeing to be bound by
-                                    the
-                                    following Terms including any notices contained or referenced within. If you do not
-                                    wish
-                                    to be bound by these Terms please do not use the Site or Materials. We reserve the
-                                    right, in our sole discretion, to modify or supplement these Terms at any time/ .
-                                    Therefore, please check periodically for modifications. All amended Terms become
-                                    effective as to you upon being posted and your continued use of the Site. If you do
-                                    not
-                                    agree to any changes you must cease use of the Site. Additionally, by using the Site
-                                    you
-                                    represent that you are of sufficient legal age to enter into this Agreement and
-                                    create a
-                                    binding legal obligation for any liability you may incur as a result of your use of
-                                    the
-                                    Site. You agree to promptly update your membership information (if applicable) in
-                                    order
-                                    to keep it current, complete, and accurate.
+                                    </span> By using the Site and Materials, you agree to these Terms, including any
+                                    notices, and acknowledge the right of the provider to modify or supplement the Terms
+                                    at any time. You must promptly update your membership information and confirm
+                                    acceptance of the Privacy Policy. The provider disclaims any liability regarding
+                                    data security measures and will not be responsible for any damages resulting from a
+                                    security breach or technical malfunction.
 
-                                    You confirm that you have read and also accept the terms of our Privacy Policy, the
-                                    terms of which are hereby incorporated into this Agreement. You hereby consent to
-                                    the
-                                    use of your personal information by Parkoba and/or third-party providers and
-                                    distributors in accordance with the terms of the and for the purposes set forth in
-                                    the
-                                    Privacy Policy. Parkoba makes no representation or warranty, and hereby disclaims
-                                    any
-                                    and all liability, with regard to the sufficiency of the security measures used for
-                                    data
-                                    handling and storage. Parkoba will not be responsible for any actual or
-                                    consequential
-                                    damages that result from a security breach or technical malfunction.
-                                </li>
+
+
+
+
 
 
 
