--- a/tc.html
+++ b/tc.html
@@ -117,17 +117,48 @@
                                     data security measures and will not be responsible for any damages resulting from a
                                     security breach or technical malfunction.
 
-
-
-
-
-
-
-
                             </p>
                         </div>
                     </div>
                 </div>
+
+                <div class="row">
+
+                    <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
+                        <div class="mb-4">
+                            <!-- <h3 class="h3 mb-4 text-black">Parkoba Terms and conditions </h3> -->
+                            <p class="about-text">Welcome! By using the Parkoba.com website or mobile application
+                                (collectively the "Sites"), you agree to be bound by the following terms and conditions
+                                (the "Terms of Use" or "Agreement"). As used in this Agreement, Parkoba Nigeria will be
+                                referred to as "Parkoba" or "we", and you will be referred to as "you". Parkoba and its
+                                associated websites and mobile applications are owned by Parkoba Nigeria and all rights
+                                of Parkoba are reserved on behalf of Parkoba Nigeria.
+                                <!-- <li class="about-text"> -->
+                                    <span>
+                                        <h5>Ownership and Reservation of Rights: </h5>
+                                    </span> By using the Site and Materials, you agree to these Terms, including any
+                                    notices, and acknowledge the right of the provider to modify or supplement the Terms
+                                    at any time. You must promptly update your membership information and confirm
+                                    acceptance of the Privacy Policy. The provider disclaims any liability regarding
+                                    data security measures and will not be responsible for any damages resulting from a
+                                    security breach or technical malfunction.
+
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
+                        <figure class="circle-bg">
+                            <img src="img/key.webp" alt="Image" class="img-fluid">
+                        </figure>
+                    </div>
+                </div>
+
+
+
+
+
+
             </div>
         </div>
 
