--- a/tc.html
+++ b/tc.html
@@ -107,7 +107,7 @@
                                 referred to as "Parkoba" or "we", and you will be referred to as "you". Parkoba and its
                                 associated websites and mobile applications are owned by Parkoba Nigeria and all rights
                                 of Parkoba are reserved on behalf of Parkoba Nigeria.
-                                <li class="about-text">
+                                <ol class="about-text">
                                     <span>
                                         <h5>Acceptance:</h5>
                                     </span> By using the Site and Materials, you agree to these Terms, including any
@@ -116,7 +116,7 @@
                                     acceptance of the Privacy Policy. The provider disclaims any liability regarding
                                     data security measures and will not be responsible for any damages resulting from a
                                     security breach or technical malfunction.
-
+                                </ol>
                             </p>
                         </div>
                     </div>
@@ -134,24 +134,24 @@
                                 associated websites and mobile applications are owned by Parkoba Nigeria and all rights
                                 of Parkoba are reserved on behalf of Parkoba Nigeria.
                                 <!-- <li class="about-text"> -->
-                                    <span>
-                                        <h5>Ownership and Reservation of Rights: </h5>
-                                    </span> By using the Site and Materials, you agree to these Terms, including any
-                                    notices, and acknowledge the right of the provider to modify or supplement the Terms
-                                    at any time. You must promptly update your membership information and confirm
-                                    acceptance of the Privacy Policy. The provider disclaims any liability regarding
-                                    data security measures and will not be responsible for any damages resulting from a
-                                    security breach or technical malfunction.
+                                <span>
+                                    <h5>Ownership and Reservation of Rights: </h5>
+                                </span> By using the Site and Materials, you agree to these Terms, including any
+                                notices, and acknowledge the right of the provider to modify or supplement the Terms
+                                at any time. You must promptly update your membership information and confirm
+                                acceptance of the Privacy Policy. The provider disclaims any liability regarding
+                                data security measures and will not be responsible for any damages resulting from a
+                                security breach or technical malfunction.
 
                             </p>
                         </div>
                     </div>
 
-                    <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
+                    <!-- <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
                         <figure class="circle-bg">
                             <img src="img/key.webp" alt="Image" class="img-fluid">
                         </figure>
-                    </div>
+                    </div> -->
                 </div>
 
 
