--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Give</title>
+    <title>Parkoba Download Our App Today </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
@@ -113,23 +113,28 @@
                     <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
                         <div class="mb-4">
                             <h3 class="h3 mb-4 text-black">Download our App </h3>
-                            <p class="about-text">At our company, we understand that you need quick and easy access to parking , which
-                                is why we recommend downloading our app. Our app provides a seamless and convenient way
-                                to access all of our services from the palm of your hand. With just a few taps on your
-                                mobile device, you can access a wealth of information and resources that will help you
-                                to make informed decisions and get the most out of our services.
-                                <br>
-                        
-                                 One of the key benefits of our app is that it allows you to get parking anytime,
-                                anywhere. You can log in to your account, view your profile, and manage your preferences
-                                from anywhere with an internet connection. This means that you can stay up-to-date with
-                                the latest information and get parking even when you're on the go.
-                                <br>
-                                <br>
-                                Get our App today and get a parking under three Minutes
-                                So why wait? Download our app today and start accessing all of the
-                                benefits that it has to offer!
+                            <p class="about-text">At our company, we understand the importance of quick and easy parking
+                                access. That's why we recommend downloading our app. It provides a seamless and
+                                convenient way to access all our services from your mobile device. With just a few taps,
+                                you can access valuable information and resources, empowering you to make informed
+                                decisions and maximize our services.
+
+                                Our app offers the key benefit of on-demand parking anytime, anywhere. Whether you want
+                                to log in, view your profile, or manage preferences, you can do it all from anywhere
+                                with an internet connection. Stay up-to-date with the latest information and get parking
+                                on the go.
+
+                                Get our app today and secure parking in under three minutes. Don't wait! Start enjoying
+                                the countless benefits our app has to offer by downloading it now.
                             </p>
+
+                            <div class="button-div">
+                                <div class="button-div2">
+                                    <a href="https://www.appcreator24.com/app2620708-m6iux7"> <button
+                                            class="app-download">Get App </button></a>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
