--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-xl-2">
-            <a href="#"> <img src="img/check.jpg" class="mb-0 site-logo"><a href="index.html" class="h2 mb-0"><span
-                  class="text-primary"></span></a>
+            <a href="#"> <img src="img/parkoba icon no bg  .png" class="mb-0 site-logo"><a href="index.html"
+                class="h2 mb-0"><span class="text-primary"></span></a>
               </img>
             </a>
           </div>
@@ -65,7 +65,7 @@
                   <ul class="dropdown">
                     <li><a href="#Booking" class="nav-link">Booking Hours</a></li>
                     <!-- <li><a href="#pricing-section" class="nav-link">Services</a></li> -->
-                    <!-- <li><a href="#faq-section" class="nav-link">FAQ</a></li> -->
+                    <li><a href="tc.html" class="nav-link">FAQ</a></li>
                     <!-- <li class="has-children">
                       <a href="#">More Links</a>
                       <ul class="dropdown">
